--- a/static/index.html
+++ b/static/index.html
@@ -5,12 +5,9 @@
 		<title>MarkEdit</title>
 		<link rel="stylesheet" href="stylesheets/minireset.css"></link>
 		<link rel="stylesheet" href="stylesheets/index.css"></link>
-		<script src="https://unpkg.com/react@16/umd/react.development.js"></script>
-		<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-		<script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
-		<script src="scripts/app.js"></script>
 	</head>
 	<body>
-		<h1>Hello, World!</h1>
+		<main id="application"></main>
+		<script src="scripts/bundle.js"></script>
 	</body>
 </html>
