Get Basic React-Quill Editor Working

--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
 		<title>MarkEdit</title>
 		<link rel="stylesheet" href="stylesheets/minireset.css"></link>
 		<link rel="stylesheet" href="stylesheets/index.css"></link>
+		<link rel="stylesheet" href="https://unpkg.com/react-quill@1.0.0/dist/quill.snow.css"></link>
 	</head>
 	<body>
 		<main id="application"></main>
